# gridkit-app

./: .depcheckrc  .eslintignore  .gitattributes  .gitignore  DEV.md  README.md  biome.json  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts  turbo.json  watch.ts
.github/workflows/: checks.yml  publish.yml  release-apps.yml  release-npm.yml  release.yml
apps/designer/: biome.json  forge.config.ts  index.html  package.json  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
apps/storybook/: index.html  package.json  vite.config.ts
apps/studio/: biome.json  env.d.ts  forge.config.cts  forge.config.ts  index.html  package.json  tsconfig.json  tsconfig.types.json  vite.base.config.ts  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/src/: lib.rs
commands/screenshot/: index.html  package.json  vite.config.ts
core/: tsup.config.ts
core/analysis/: package.json  tsconfig.json
core/design/: .gitignore  biome.json  package.json  (+1 more)
parts/: tsup.config.ts
patches/: @electron-forge+plugin-vite+7.4.0.patch  constate+3.3.2.patch  turbowatch+2.29.4.patch  turbowatch@2.29.4.patch
products/: tsup.config.ts
scripts/: test-solver-native.mjs  validate-pynite.py
solver/: Cargo.toml
solver/pkg/: .gitignore  gridkit_solver.d.ts  gridkit_solver.js  gridkit_solver_bg.wasm  gridkit_solver_bg.wasm.d.ts  package.json
solver/src/: lib.rs
util/: tsup.config.ts
(+495 files in other folders)
