[package]
name = "gridkit-solver"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
description = "Linear elastic 3D direct-stiffness solver for gridkit structural analysis (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"   # optimise for size (WASM bundle)
