[package]
name = "villagekit-studio"
version = "0.1.0"
description = "Design modular products with Village Kit"
authors = ["Mikey <mikey@villagekit.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.56"
tokio = { version = "1", features = ["fs"] }
toml = "0.8.8"
